--- a/photo1.html
+++ b/photo1.html
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="css/photo1.css">
 </head>
 <body>
-    <div class="hovergallery" align="center">
-        <a href="#"><img src="images/minsk_1.jpg"/></a>
-        <a href="#"><img src="images/minsk_2.jpg"/></a>
-        <a href="#"><img src="images/minsk_3.jpg"/></a>
-        <a href="#"><img src="images/minsk_4.jpg"/></a>
+    <div class="hovergallery">
+        <a href="#"><img src="images/minsk_1.jpg" alt="Минск1"/></a>
+        <a href="#"><img src="images/minsk_2.jpg" alt="Минск2"/></a>
+        <a href="#"><img src="images/minsk_3.jpg" alt="Минск3"/></a>
+        <a href="#"><img src="images/minsk_4.jpg" alt="Минск4"/></a>
     </div>
 </body>
 </html>
