--- a/ribbon.html
+++ b/ribbon.html
@@ -9,19 +9,19 @@
 </head>
 <body>
     <div class="ribbon">
-        <img src="images/strawberry.jpg">
+        <img src="images/strawberry.jpg" alt="Клубника">
         <p><span>клубника</span></p>
     </div>
     <div class="ribbon">
-        <img src="images/cherry.jpg">
+        <img src="images/cherry.jpg" alt="Вишня">
         <p><span>вишня</span></p>
     </div>
     <div class="ribbon">
-        <img src="images/malina.jpg">
+        <img src="images/malina.jpg" alt="Малина">
         <p><span>малина</span></p>
     </div>
     <div class="ribbon">
-        <img src="images/smorodina.jpg">
+        <img src="images/smorodina.jpg" alt="Смородина">
         <p><span>смородина</span></p>
     </div>
 </body>
