--- a/photo1.html
+++ b/photo1.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="hovergallery">
-        <a href="#"><img src="images/minsk_1.jpg" alt="Минск1"/></a>
-        <a href="#"><img src="images/minsk_2.jpg" alt="Минск2"/></a>
-        <a href="#"><img src="images/minsk_3.jpg" alt="Минск3"/></a>
-        <a href="#"><img src="images/minsk_4.jpg" alt="Минск4"/></a>
+        <a href="#"><img src="images/minsk_1.jpg" alt="Минск фото 1"/></a>
+        <a href="#"><img src="images/minsk_2.jpg" alt="Минск фото 2"/></a>
+        <a href="#"><img src="images/minsk_3.jpg" alt="Минск фото 3"/></a>
+        <a href="#"><img src="images/minsk_4.jpg" alt="Минск фото 4"/></a>
     </div>
 </body>
 </html>
